--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -247,6 +247,15 @@
         "sac-like",
         "unsegmented or segmented body",
         "bilateral symmetry",
-        "lacks legs or appendages"
+        "lacks legs or appendages",
+        "radial symmetry",
+        "endoskeleton",
+        "water vascular system",
+        "exoskeleton",
+        "jointed legs",
+        "segmented body",
+        "mantle",
+        "tentacles",
+        "unsegmented body"
     ]
 }
