--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -218,7 +218,23 @@
         {
             "current animal group": "conclusion vertebrate animal",
             "conclusion": "The animal is a vertebrate animal."
-        }
+        },
+        {
+            "conditionGroup": {
+              "requirements": ["backbone", "skeleton"],
+              "logic": {
+                "bothTrue": {
+                  "action": "Label as vertebrate and proceed with vertebrate questions"
+                },
+                "oneTrue": {
+                  "action": "Label as invertebrate but with special notes for skeletal anomalies"
+                },
+                "bothFalse": {
+                  "action": "Label as invertebrate and proceed with invertebrate questions"
+                }
+              }
+            }
+          }
     ],
     "Facts": [
         "backbone",
