--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -220,17 +220,19 @@
             "conclusion": "The animal is a vertebrate animal."
         },
         {
-            "conditionGroup": {
-                "requirements": ["backbone", "skeleton"],
+            "vertebrateClassification": {
+                "requirements": ["hasBackbone", "hasInternalSkeleton"],
                 "logic": {
                     "bothTrue": {
-                        "action": "Label as vertebrate and proceed with vertebrate questions"
+                        "action": "Proceed to the next vertebrate question",
+                        "nextQuestion": "Does the animal produce milk to feed its young?"
                     },
                     "oneTrue": {
-                        "action": "Label as invertebrate but with special notes for skeletal anomalies"
+                        "action": "Proceed to the skull question",
+                        "nextQuestion": "Does the animal have a head with a brain protected by a skull?"
                     },
                     "bothFalse": {
-                        "action": "Label as invertebrate and proceed with invertebrate questions"
+                        "action": "Classify as invertebrate"
                     }
                 }
             }
