--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -586,7 +586,8 @@
         "segmented body",
         "mantle",
         "tentacles",
-        "unsegmented body","underdeveloped young",
+        "unsegmented body",
+        "underdeveloped young",
         "pouch",
         "live birth",
         "fully developed young",
